        * [ADDED]: View window now supports explicit column names for the view (introduced in SQLite 3.9).
        * [CHANGE]: DbAndroid plugin has now JAR file embedded and you can get it from Tools menu.
        * [CHANGE]: SQLite version updated to 3.13.0.
        * [CHANGE]: Qt version updated to 5.6.0. Should still compile with 5.3, but binary distributions on homepage will be made with 5.6.
        * [BUGFIX]: Not loading Android plugin by default (needs manual load from configuration dialog), which stops the "ADB" error for people not using the plugin.
        * [BUGFIX]: #2927 Several critical bugs fixed and enhancements to table modification algorithm related to foreign keys.
        * [BUGFIX]: Fixed importing from CSV with some of lines containing less fields than defined in header (or in first data row).
        * [BUGFIX]: #2989 Fixed multiline value handling in CSV import plugin.
        * [BUGFIX]: #2921 Fixed empty values as NULL handling in CSV import plugin.
        * [BUGFIX]: #3034 Fixed handling empty string as value for DEFAULT constraint.
        * [BUGFIX]: #3064 Fixed locking database executions when counting rows in huge tables.
        * [BUGFIX]: DbAndroid plugin has fix for null pointer in the JAR when client has disconnected
        * [BUGFIX]: Error message details were missing in some cases (when smart execution method failed at parsing stage). This is fixed now.
        * [BUGFIX]: #3026 #3027 #3043 Fixed RAISE() function formatting in enterprise formatter (used to produce invalid SQL).
        * [BUGFIX]: #3015 Fixed error with DEFAULT constraint containing datetime('now', 'localtime').
        * [BUGFIX]: #3000 Fixed compilation errors for Qt >= 5.5.
        * [BUGFIX]: #2956 Fixed unexpected data refresh when clicking in the right side of value filter field in table window.
        * [BUGFIX]: #2991 #2928 #2929 #2941 #2960 Fixed executing "garbage" query, causing application crash.