@@ -7,6 +7,7 @@
         * [CHANGE]: DbAndroid plugin has now JAR file embedded and you can get it from Tools menu.
         * [CHANGE]: SQLite version updated to 3.13.0.
         * [CHANGE]: Qt version updated to 5.6.0. Should still compile with 5.3, but binary distributions on homepage will be made with 5.6.
+        * [CHANGE]: Foreign key dropdown (when editing FK cell) uses now more readable set of columns and column headers can be resized.
         * [BUGFIX]: Not loading Android plugin by default (needs manual load from configuration dialog), which stops the "ADB" error for people not using the plugin.
         * [BUGFIX]: #2927 Several critical bugs fixed and enhancements to table modification algorithm related to foreign keys.
         * [BUGFIX]: Fixed importing from CSV with some of lines containing less fields than defined in header (or in first data row).
@@ -34,6 +35,7 @@
         * [BUGFIX]: Table window for new table (just created) will now properly close when that table gets deleted immediately by the user.
         * [BUGFIX]: #2998 Fixed reading decimal values from database when using simple execution method (a fallback in case of some problems).
         * [BUGFIX]: #2999 Fixed working on objects from database that on the list is named "main".
+        * [BUGFIX]: #3008 Editing foreign key cell with more than 10 000 possible values will now use simple text editor, not dropdown. It also loads values asynchronously.
 
 [3.0.7]
         * [ADDED]: #2951 Implemented dropdown value picking for foreign key columns in grid view.
